# DoomLite

./: CMakeLists.txt  README.md
src/: main.cpp
src/platform/: platform.h
src/platform/sdl2/: platform_sdl2.cpp
src/renderer/: framebuffer.cpp  framebuffer.h
src/wad/: wad.cpp  wad.h
